fix waybar workspace gaps issue

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -20,8 +20,8 @@ window#waybar {
 }
 
 #workspaces {
-  background-color: @bg;
-  margin-left: 6px;
+  margin: 6px 3px;
+  background: @bg;
 }
 
 #workspaces button {
